update api and .js files
